<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Campos de entrada de números -->
        <EditText
            android:id="@+id/entradaNumero1"
            style="@style/CalculatorEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_first_number"
            android:inputType="numberDecimal|numberSigned" />

        <EditText
            android:id="@+id/entradaNumero2"
            style="@style/CalculatorEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/enter_second_number"
            android:inputType="numberDecimal|numberSigned" />

        <!-- Selector de tipo de cálculo -->
        <RadioGroup
            android:id="@+id/grupoTipoCalculo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp">

            <RadioButton
                android:id="@+id/radioBotonUnico"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                style="@style/CalculatorSelectionControl"
                android:text="@string/single_calculation"
                android:checked="true"/>

            <RadioButton
                android:id="@+id/radioBotonMultiple"
                android:layout_width="0dp"
                android:layout_weight="1"
                style="@style/CalculatorSelectionControl"
                android:layout_height="wrap_content"
                android:text="@string/multiple_calculations"/>
        </RadioGroup>

        <!-- Tarjeta para Cálculo Único -->
        <androidx.cardview.widget.CardView
            android:id="@+id/tarjetaCalculoUnico"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:cardBackgroundColor="@color/card_background"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <RadioGroup
                    android:id="@+id/grupoRadioOperaciones"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/radioBotonSuma"
                        style="@style/CalculatorSelectionControl"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/add" />

                    <RadioButton
                        android:id="@+id/radioBotonResta"
                        style="@style/CalculatorSelectionControl"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/subtract" />

                    <RadioButton
                        android:id="@+id/radioBotonMultiplicacion"
                        style="@style/CalculatorSelectionControl"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/multiply" />

                    <RadioButton
                        android:id="@+id/radioBotonDivision"
                        style="@style/CalculatorSelectionControl"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/divide" />
                </RadioGroup>

                <Button
                    android:id="@+id/botonCalcular1"
                    style="@style/CalculatorButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/calculate" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Tarjeta para Cálculos Múltiples -->
        <androidx.cardview.widget.CardView
            android:id="@+id/tarjetaCalculoMultiple"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:visibility="gone"
            app:cardBackgroundColor="@color/card_background"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <CheckBox
                        android:id="@+id/casillaSuma"
                        style="@style/CalculatorSelectionControl"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/add" />

                    <CheckBox
                        android:id="@+id/casillaResta"
                        style="@style/CalculatorSelectionControl"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/subtract" />

                    <CheckBox
                        android:id="@+id/casillaMultiplicacion"
                        style="@style/CalculatorSelectionControl"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/multiply" />

                    <CheckBox
                        android:id="@+id/casillaDivision"
                        style="@style/CalculatorSelectionControl"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/divide" />

                </LinearLayout>

                <Button
                    android:id="@+id/botonCalcular2"
                    style="@style/CalculatorButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/calculate" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Campo de resultado -->
        <EditText
            android:id="@+id/campoResultado"
            style="@style/CalculatorEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:gravity="top"
            android:hint="@string/result"
            android:inputType="textMultiLine"
            android:minLines="3" />

    </LinearLayout>
</ScrollView>
